[package]
name = "poreader"
version = "1.0.2"
edition = "2021"
description = "Read translation catalogs in PO format."
authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/poreader"
repository = "https://github.com/coreabreaker/poreader/"
readme = "README.md"
keywords = ["translate", "po", "gettext", "file"]
categories = ["internationalization", "text-processing"]

[badges]
travis-ci = { repository = "coreabreaker/poreader" }
appveyor = { repository = "coreabreaker/poreader" }

[build-dependencies]
lalrpop = "~0.19.6"

[dependencies]
lalrpop-util = { version = "~0.19.6", features = ["lexer"] }
locale_config = "^0.3.0"
regex = "^1.5.4"
