[package]
name = "poreader"
version = "1.1.2"
edition = "2021"
description = "Read translation catalogs in PO format."
authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/poreader"
repository = "https://github.com/corebreaker/poreader"
readme = "README.md"
keywords = ["translate", "po", "gettext", "file"]
categories = ["internationalization", "text-processing"]

[build-dependencies]
lalrpop = "0.19.12"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
locale_config = "0.3.0"
regex = "1.10.4"
